added the workability api key

--- a/AI-Image-generator/index.html
+++ b/AI-Image-generator/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI image-Genarator</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="
-    href="https://fonts.googleapis.com/css?family=Tangerine">
-    
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Tangerine"
+    />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <section class="image-generator">
       <div class="content">
-        <h1>Ai Image Generator Tool</h1>
+        <h1>AI Image Generator Tool</h1>
         <p>
           Convert your text into an image within a second using this
           javascript-powered AI image generator tool.
@@ -25,7 +28,7 @@
             required
           />
           <div class="controls">
-            <select name="" id="" class="image-quantity">
+            <select name="" id="" class="img-quantity">
               <option value="1">1 image</option>
               <option value="2">2 images</option>
               <option value="3">3 images</option>
@@ -34,6 +37,36 @@
             <button type="submit" class="generate-btn">Generate</button>
           </div>
         </form>
+      </div>
+    </section>
+
+    <section class="image-gallery">
+      <i class="fa-regular fa-download"></i>
+      <div class="img-card">
+        <img src="images/th (2).jpeg" alt="image" />
+        <a href="#" class="download-btn">
+          <img src="images/download-button-icon-1.png" alt="download-icon" />
+          <i class="fa-regular fa-download"></i>
+        </a>
+      </div>
+
+      <div class="img-card">
+        <img src="images/th (1).jpeg" alt="image" />
+        <a href="#" class="download-btn">
+          <img src="images/download-button-icon-1.png" alt="download-icon" />
+        </a>
+      </div>
+      <div class="img-card">
+        <img src="images/th (3).jpeg" alt="image" />
+        <a href="#" class="download-btn">
+          <img src="images/download-button-icon-1.png" alt="download-icon" />
+        </a>
+      </div>
+      <div class="img-card">
+        <img src="images/th (4).jpeg" alt="image" />
+        <a href="#" class="download-btn">
+          <img src="images/download-button-icon-1.png" alt="download-icon" />
+        </a>
       </div>
     </section>
   </body>
